--- a/n-Puzzle/n-Puzzle.vcxproj
+++ b/n-Puzzle/n-Puzzle.vcxproj
@@ -115,11 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Manager.h" />
+    <ClInclude Include="Functions.h" />
+    <ClInclude Include="Npuzzle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Manager.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
