Rearranged functions into and within Npuzzle namespace. Fixed solvable(). AI now solves all possible board configurations and rejects all non-solvable ones.

--- a/n-Puzzle/n-Puzzle.vcxproj
+++ b/n-Puzzle/n-Puzzle.vcxproj
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Functions.h" />
+    <ClInclude Include="Headers.h" />
     <ClInclude Include="Npuzzle.h" />
   </ItemGroup>
   <ItemGroup>
