--- a/n-Puzzle/n-Puzzle.vcxproj.filters
+++ b/n-Puzzle/n-Puzzle.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="Npuzzle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Functions.h">
+    <ClInclude Include="Headers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
