Separated namespace functions into corresponding .cpp files. Refactored a few functions to make them more functional.

--- a/n-Puzzle/n-Puzzle.vcxproj.filters
+++ b/n-Puzzle/n-Puzzle.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="Npuzzle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Headers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Solver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BoardFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Codes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
