--- a/n-Puzzle/n-Puzzle.vcxproj
+++ b/n-Puzzle/n-Puzzle.vcxproj
@@ -115,11 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Headers.h" />
     <ClInclude Include="Npuzzle.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BoardFunctions.cpp" />
+    <ClCompile Include="Codes.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Solver.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
